@@ -10,7 +10,6 @@ import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Transactional
 @Service
@@ -30,7 +29,7 @@ public class AuthServiceImpl implements AuthService {
     public List<AuthResponseDto> getAllAuths() {
         return authRepository.findAll().stream()
                 .map(auth -> new AuthResponseDto(auth.getAuthId(), auth.getAuthName()))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
